# walutomat-ha

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
custom_components/walutomat/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/walutomat/translations/: en.json  pl.json
tests/: conftest.py  test_config_flow.py  test_init.py  test_sensor.py
